syntax = "proto3";

option java_package = "ie.app.minimap.data.proto";
option java_multiple_files = true;

// Floor
message FloorProto {
  int64 id = 1;
  int64 building_id = 2;
  int32 level = 3;
  string name = 4;
  int64 created_at = 5;
}