syntax = "proto3";

option java_package = "ie.app.minimap.data.proto";
option java_multiple_files = true;

message FloorConnectionProto {
  int64 id = 1;
  int64 venue_id = 2;
  int64 building_id = 3;
  int64 from_floor = 4;
  int64 from_node = 5;
  int64 to_floor = 6;
  int64 to_node = 7;
  string type = 8;
  float weight = 9;
  int64 created_at = 10;
}
